--- a/Week_3_MachineLearning.ipynb
+++ b/Week_3_MachineLearning.ipynb
@@ -2271,12 +2271,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "7emmF_XnP0gF",
-        "outputId": "e7ce7f03-c1ee-441e-9a75-d9a2f56128c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
-        }
+        },
+        "id": "7emmF_XnP0gF",
+        "outputId": "e7ce7f03-c1ee-441e-9a75-d9a2f56128c3"
       },
       "execution_count": 20,
       "outputs": [
@@ -2308,12 +2308,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "T9dEDegnP_sE",
-        "outputId": "64af3230-6417-4d95-822b-7866a92cdb93",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
-        }
+        },
+        "id": "T9dEDegnP_sE",
+        "outputId": "64af3230-6417-4d95-822b-7866a92cdb93"
       },
       "execution_count": 21,
       "outputs": [
@@ -2537,11 +2537,11 @@
         "print_features(my_features_minmax_df)"
       ],
       "metadata": {
-        "id": "LrF6JkbMRjLt",
-        "outputId": "b495d798-dc33-48fb-f84d-072f88a20c9a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LrF6JkbMRjLt",
+        "outputId": "b495d798-dc33-48fb-f84d-072f88a20c9a"
       },
       "execution_count": 37,
       "outputs": [
@@ -2591,11 +2591,11 @@
         "print_features(merged_features_minmax_df)"
       ],
       "metadata": {
-        "id": "0WXsJazYSQ1r",
-        "outputId": "0f9582a2-4ca7-49fe-e408-5468747cb009",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0WXsJazYSQ1r",
+        "outputId": "0f9582a2-4ca7-49fe-e408-5468747cb009"
       },
       "execution_count": 38,
       "outputs": [
@@ -3173,12 +3173,12 @@
         "scores_df.sort_values(by='Accuracy Score',axis=0,ascending=False)"
       ],
       "metadata": {
-        "id": "xMEgEMhPkG_d",
-        "outputId": "29c64256-8eb1-46e4-ee13-ea43abdede58",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 551
-        }
+        },
+        "id": "xMEgEMhPkG_d",
+        "outputId": "29c64256-8eb1-46e4-ee13-ea43abdede58"
       },
       "execution_count": 73,
       "outputs": [
@@ -3571,12 +3571,12 @@
         "my_scores_df.sort_values(by='Accuracy Score',axis=0,ascending=False)"
       ],
       "metadata": {
-        "id": "3KpRWo-ifjOd",
-        "outputId": "f2ece0fe-c5f0-4019-a150-6b4493fa988b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "3KpRWo-ifjOd",
+        "outputId": "f2ece0fe-c5f0-4019-a150-6b4493fa988b"
       },
       "execution_count": 64,
       "outputs": [
@@ -3917,12 +3917,12 @@
         "merged_scores_df.sort_values(by='Accuracy Score',axis=0,ascending=False)"
       ],
       "metadata": {
-        "id": "-Qxe3YQ4mO6O",
-        "outputId": "885c6a75-f3a7-465a-f905-10c0c6e33843",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "-Qxe3YQ4mO6O",
+        "outputId": "885c6a75-f3a7-465a-f905-10c0c6e33843"
       },
       "execution_count": 74,
       "outputs": [
@@ -4309,6 +4309,8 @@
       "source": [
         "from sklearn.svm import SVC\n",
         "\n",
+        "#for merged data\n",
+        "\n",
         "model = SVC(\n",
         "    C=10,  #higher the value tighter the margin\n",
         "    gamma='auto',\n",
@@ -4316,18 +4318,31 @@
         "    random_state=42\n",
         ")\n",
         "\n",
-        "model.fit(X_train, y_train)\n",
+        "model.fit(X_train_mrd, y_train_mrd)\n",
         "\n",
-        "print(f'SVC Model\\'s accuracy on training set is {100*model.score(X_train, y_train):.2f}%')\n",
+        "print(f'SVC Model\\'s accuracy on training set is {100*model.score(X_train_mrd, y_train_mrd):.2f}% using merged dataset')\n",
         "\n",
         "#the performance = this\n",
-        "print(f'SVC Model\\'s accuracy on test set is {100*model.score(X_test, y_test):.2f}%')"
+        "print(f'SVC Model\\'s accuracy on test set is {100*model.score(X_test_mrd, y_test_mrd):.2f}% using merged dataset')"
       ],
       "metadata": {
-        "id": "Dportn1yltIy"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Dportn1yltIy",
+        "outputId": "67ef51df-57d5-45e1-f861-fe165c57d0d2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SVC Model's accuracy on training set is 99.74% using merged dataset\n",
+            "SVC Model's accuracy on test set is 50.69% using merged dataset\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4414,6 +4429,55 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "\n",
+        "####### Default kNN  ########\n",
+        "model = KNeighborsClassifier(\n",
+        ")\n",
+        "\n",
+        "model.fit(X_train_mrd, y_train_mrd)\n",
+        "\n",
+        "print(f'Default kNN Model\\'s accuracy on training set is {100*model.score(X_train_mrd, y_train_mrd):.2f}% using merged dataset')\n",
+        "print(f'Default kNN Model\\'s accuracy on test set is {100*model.score(X_test_mrd, y_test_mrd):.2f}% using merged dataset\\n')\n",
+        "\n",
+        "##### (hastily) tuned kNN ######\n",
+        "model = KNeighborsClassifier(\n",
+        "    n_neighbors = 5,\n",
+        "    weights = 'distance',\n",
+        "    algorithm = 'brute',\n",
+        "    n_jobs=4\n",
+        ")\n",
+        "\n",
+        "model.fit(X_train_mrd, y_train_mrd)\n",
+        "\n",
+        "print(f'kNN Model\\'s accuracy on training set is {100*model.score(X_train_mrd, y_train_mrd):.2f}% using merged dataset')\n",
+        "print(f'kNN Model\\'s accuracy on test set is {100*model.score(X_test_mrd, y_test_mrd):.2f}% using merged dataset')"
+      ],
+      "metadata": {
+        "id": "0LsWDlWqn7Wk",
+        "outputId": "43233146-648f-4580-d269-3d4564ace5c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Default kNN Model's accuracy on training set is 66.67% using merged dataset\n",
+            "Default kNN Model's accuracy on test set is 50.34% using merged dataset\n",
+            "\n",
+            "kNN Model's accuracy on training set is 99.74% using merged dataset\n",
+            "kNN Model's accuracy on test set is 52.07% using merged dataset\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "zvQ3av4cL9hh"
@@ -4480,6 +4544,59 @@
         "\n",
         "print(f'Random Forest Model\\'s accuracy on training set is {100*model.score(X_train, y_train):.2f}%')\n",
         "print(f'Random Forest Model\\'s accuracy on test set is {100*model.score(X_test, y_test):.2f}%')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "####### Default Random Forest ########\n",
+        "model = RandomForestClassifier(\n",
+        "    random_state=69\n",
+        ")\n",
+        "\n",
+        "model.fit(X_train_mrd, y_train_mrd)\n",
+        "\n",
+        "print(f'Default Random Forest Model\\'s accuracy on training set is {100*model.score(X_train_mrd, y_train_mrd):.2f}% using merged dataset')\n",
+        "print(f'Default Random Forest Model\\'s accuracy on test set is {100*model.score(X_test_mrd, y_test_mrd):.2f}% using merged dataset\\n')\n",
+        "\n",
+        "\n",
+        "########## Tuned Random Forest #######\n",
+        "model = RandomForestClassifier(\n",
+        "    n_estimators = 500,\n",
+        "    criterion ='entropy',\n",
+        "    warm_start = True,\n",
+        "    max_features = 'sqrt',\n",
+        "    oob_score = True, # more on this below\n",
+        "    random_state=42\n",
+        ")\n",
+        "\n",
+        "model.fit(X_train_mrd, y_train_mrd)\n",
+        "\n",
+        "print(f'Random Forest Model\\'s accuracy on training set is {100*model.score(X_train_mrd, y_train_mrd):.2f}% using merged dataset')\n",
+        "print(f'Random Forest Model\\'s accuracy on test set is {100*model.score(X_test_mrd, y_test_mrd):.2f}% using merged dataset')"
+      ],
+      "metadata": {
+        "id": "0ViCacNXoZv6",
+        "outputId": "5b894650-ca3c-456f-9fc1-479bb15ee459",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Default Random Forest Model's accuracy on training set is 99.74% using merged dataset\n",
+            "Default Random Forest Model's accuracy on test set is 57.59% using merged dataset\n",
+            "\n",
+            "Random Forest Model's accuracy on training set is 99.74% using merged dataset\n",
+            "Random Forest Model's accuracy on test set is 54.83% using merged dataset\n"
+          ]
+        }
       ]
     },
     {
